# vita

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md
src/: detect.rs  file.c  info.rs  main.c  main.rs  options.h  output.rs  theme.rs  traverse.c  traverse.h  utils.c  utils.h
src/render/: blame.rs  brief.rs  code.rs  csv.rs  grep.rs  hex.rs  json.rs  markdown.rs  mod.rs  plain.rs  showall.rs  toml.rs  yaml.rs
src/render/image/: decoder.rs  mod.rs  renderer.rs
